[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
redis = "0.26.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tonic-build = "0.12.1"
prost-build = "0.13.1"
prost-serde = "0.3.0"
prost-serde-derive = "0.1.5"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
base64 = "0.22.1"
rand = "0.8.5"



[build-dependencies]
tonic-build = "0.12.1"
prost-build = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
prost-serde-derive = "0.1.5"
prost-serde = "0.3.0"
prost-wkt-build = "0.6"



